--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: biological sciences 
+  uni: fiu
+  year: 2023
+  # awards: being a good pwerson
+  # summary: i am cool
